<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/pageLeftMenuItem"
		android:icon="@drawable/icon_arrow_left"
		android:title="@string/menu_bar_species_page_left"
		app:showAsAction="always" />
	<item
		android:id="@+id/pageRightMenuItem"
		android:icon="@drawable/icon_arrow_right"
		android:title="@string/menu_bar_species_page_right"
		app:showAsAction="always" />
	<item
		android:id="@+id/scanTicketMenuItem"
		android:icon="@drawable/icon_scan_qr_code"
		android:title="@string/menu_bar_ticket_scan"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/settingsMenuItem"
		android:icon="@drawable/icon_settings"
		android:title="@string/menu_bar_settings"
		app:showAsAction="ifRoom" />
</menu>